--- a/html/skins/liveFlowPlayer/skin.html
+++ b/html/skins/liveFlowPlayer/skin.html
@@ -8,9 +8,10 @@
 		<div class="controlbar">
 			<div class="controlbar-bg">控制栏背景</div>
 			<ul class="controlbar-btns">
-				<li><a href="javascript:;" class="controlbar-btns-play" tabindex="1">播放</a></li>
-				<li><a href="javascript:;" class="controlbar-btns-pause" tabindex="2">暂停</a></li>
-				<div class="controlbar-playtime">00:00</div>
+				<!--<li><a href="javascript:;" class="controlbar-btns-play" tabindex="1">播放</a></li>
+				<li><a href="javascript:;" class="controlbar-btns-pause" tabindex="2">暂停</a></li>-->
+				<li><a href="javascript:;" class="controlbar-btns-live" tabindex="2">直播</a></li>
+				<div class="controlbar-playtime">00:00:00</div>
 				<div class="controlbar-progress">
 					<div class="controlbar-progress-totalline"></div>
 					<div class="controlbar-progress-loadedline"></div>
@@ -30,7 +31,7 @@
 				</li>
 				<li class="right-float"><a href="javascript:;" class="controlbar-btns-soundclose" tabindex="1">音量关闭</a></li>
 				<li class="right-float"><a href="javascript:;" class="controlbar-btns-soundopen" tabindex="1">音量打开</a></li>
-				<div class="controlbar-totaltime">00:00</div>
+				<div class="controlbar-totaltime">00:00:00</div>
 			</ul>
 		</div>
 		<div class="logo">
@@ -53,23 +54,9 @@
 		<div class="big-play-btn">
 			<a href="javascript:;" class="big-play-icon" tabindex="1">大播放按钮</a>
 		</div>
-		<div class="clarity-switch-btn">
+		<!--<div class="clarity-switch-btn">
 			<a href="javascript:;" class="clarity-btn-text" tabindex="1">默认</a>
-		</div>
-		<div class="controlbar-clarity-window">
-				<div class="clarity-box">
-				 <div>
-				    <div class="clarity-Title">Definition Setting</div>
-				    <div class="clarity-Close"><a href="javascript:;" name="cancel_clarity">X</a></div>
-				 </div>
-				 <div class="clarity-radios-group">	
-				 </div> 
-				 <div class="clarity-btns">
-				    <a class="clarity-btn-ok" href="javascript:;" name="confirm_clarity">OK</a>
-				    <a class="clarity-btn-cancel" href="javascript:;" name="cancel_clarity">Cancel</a> 
-				 </div>
-				</div>
-		</div>
+		</div>-->
 	</div>
 </body>
 </html>
