--- a/demo/audioDemo.html
+++ b/demo/audioDemo.html
@@ -9,19 +9,19 @@
 	<body>
 		
 		<script>
-		    var host="http://192.168.1.124/sewiseplayer_js_3.0.0/bin/"
+		   // var host="http://192.168.1.124/sewiseplayer_js_3.0.0/bin/"
 		    var config={
 		    	elid:"con1",
 		    	autostart:true,
-                url:host+"video/test.mp3",
+                url:'http://m.seowhy.com/uploads/voice/201702/3b26979c75d16efa495c327273a393c3.amr',
                 server:"vod",
                 type:"mp3",
                 //primary:"flash",
                 title:"2016年的第一场雪",
-                fallbackurls:{
-                "mp3": host+"video/audio.mp3",
-                "ogg": host+"video/test.ogg"
-               },
+            //    fallbackurls:{
+            //    "mp3": host+"video/audio.mp3",
+            //    "ogg": host+"video/test.ogg"
+            //   },
 		    	skin:"vodRadio"
 		    };
 		  
