--- a/demo/hlsjsPluginDemo.html
+++ b/demo/hlsjsPluginDemo.html
@@ -18,7 +18,7 @@
 		    	autostart:true,
 		    	type:"m3u8",
 		    	hlsjs:true,//优先使用浏览器播放m3u8视频
-		    	url:"http://7xnprv.com1.z0.glb.clouddn.com/vedio.m3u8",
+		    	url:"hls/file.m3u8",
 		    	skin:"vodWhite"//vodFlowPlayer"
 		    };
 		   
