--- a/demo/hlsDemo.html
+++ b/demo/hlsDemo.html
@@ -17,7 +17,7 @@
 		    	autostart:true,
 		    	encodeurl:true,
 		        type:"m3u8",
-		    	url:"http://playlists/x36xhzz/x36xhzz.m3u8",
+		    	url:"hls/file.m3u8",
 		    	skin:"vodWhite"
 		    };
 		   
